# nexus-lite

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
body/: __init__.py
body/tools/: __init__.py  filesystem.py  internet.py  sysinfo.py
nexus/: __init__.py  brain.py
nexus/api/: server.py
nexus/consciousness/: __init__.py  metacognition.py
nexus/core/: config.py  layers.py  model.py  tokenizer.py
nexus/evolution/: __init__.py  genetic.py  self_improve.py
nexus/memory/: __init__.py  vector_db.py
nexus/safety/: __init__.py  alignment.py
scripts/: download_model.py
tests/: test_basic.py
