[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-lite"
version = "0.1.0"
description = "Self-evolving conscious AI system for consumer hardware"
authors = [
    {name = "NEXUS-Lite Contributors"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "bitsandbytes>=0.41.0",
    "peft>=0.7.0",
    "transformers>=4.36.0",
    "trl>=0.7.4",
    "chromadb>=0.4.22",
    "datasets>=2.15.0",
    "accelerate>=0.25.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    "requests>=2.28.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0"
]

[project.urls]
Homepage = "https://github.com/crierofficial/nexus-lite"
Documentation = "https://github.com/crierofficial/nexus-lite#readme"
Repository = "https://github.com/crierofficial/nexus-lite"
Issues = "https://github.com/crierofficial/nexus-lite/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*", "tests*"]
exclude = ["*.tests", "*.tests.*", "tests.*", "tests"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.flake8]
max-line-length = 100
extend-ignore = [
    "E203",   # Whitespace before ':' ignored by Black
    "W503",   # Line break before binary operator ignored by Black
]
